[package]
name = "krdoc"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/thawkins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0"
serde_yaml = "0.9.3"
serde = { version = "1.0.141", features = ["derive"] }
lazy_static = "1.4.0"
skim = "0.10.2"

[dev-dependencies]
assert_cmd = "2.0"
