[package]
name = "krdoc"
version = "0.1.0"
edition = "2018"
authors = ["https://github.com/thawkins"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
kube = { version = "0.80.0", features = ["runtime","client","derive"] }
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_26"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.27"
